add link to english version page

--- a/index.html
+++ b/index.html
@@ -1248,6 +1248,7 @@ pre[class*="language-"] {
   <style>.markdown-body{}pre.front-matter{display:none!important;}</style>
 </head>
 <body>
+  <center><a href="index_en.html">English Version</a> | 中文版</center>
   <article class="markdown-body"><center><h3>简历</h3></center>
 <center><h4>宋广晨 | sgchenbnu@foxmail.com | 深圳</h4></center>
 
