new index english version

--- a/index_en.html
+++ b/index_en.html
@@ -1250,7 +1250,7 @@ pre[class*="language-"] {
 <body>
   <center>English Version | <a href="index.html">中文版</a></center>
   <article class="markdown-body"><center><h3>RESUME</h3></center>
-<center><h4>Guangchen Song | sgchenbnu@foxmail.com | ShenZhen</h4></center>
+<center><h5>Guangchen Song | sgchenbnu@foxmail.com | ShenZhen</h5></center>
 
 <h3 class="atx" id="education">Education</h3>
 <ul>
@@ -1270,34 +1270,46 @@ pre[class*="language-"] {
 <ul>
 <li><strong>NLP-based French News Recommendation System:</strong> Designed and developed a recommendation system, enhancing user experience.</li>
 </ul>
-<h4 class="atx" id="algorithm-engineer-or-future-education-high-tech-center-beijing-normal-university-or-nov-2022---apr-2023">Algorithm Engineer | Future Education High-Tech Center, Beijing Normal University | Nov 2022 - Apr 2023</h4>
+<h4 class="atx" id="algorithm-engineer-or-aicfe-research-center-beijing-normal-university-or-nov-2022---apr-2023">Algorithm Engineer | AICFE Research Center, Beijing Normal University | Nov 2022 - Apr 2023</h4>
 <ul>
 <li><strong>Reinforcement Learning-based ACT Testing System:</strong> Responsible for designing and implementing a student ability testing system based on reinforcement learning, achieving outstanding results.</li>
 <li><strong>Self-service Borrowing and Returning System for Sports Equipment:</strong> Utilized Flask framework and MySQL database, participated in the development of a self-service borrowing and returning system for sports equipment, improving efficiency in equipment management.</li>
 </ul>
 <h3 class="atx" id="project-experience">Project Experience</h3>
-<h3 class="atx" id="education-1">Education</h3>
+<h4 class="atx" id="french-news-recommendation-system-based-on-nlp">French News Recommendation System Based on NLP</h4>
 <ul>
-<li><p><strong>Master's Degree (2019-2022):</strong> Beijing Normal University, Major in Computer Application Technology</p>
-<ul>
-<li>Thesis: "Some New Distance Measures of Hesitant Fuzzy Sets and Its Application in Group Decision Making"</li>
-<li>Thesis: "Pythagorean Fuzzy C-means Algorithm for Image Segmentation"</li>
-<li>Thesis: "Improving the Item Selection Process with Reinforcement Learning in Computerized Adaptive Testing"</li>
-<li>Honors: First-class Academic Scholarship at Beijing Normal University (2 times)</li>
+<li><strong>Project Introduction</strong>: This is a news recommendation system based on natural language processing (NLP) technology, which can recommend the most relevant French news to users according to their reading history and preferences. The system was developed to improve the user engagement metrics of the company's news recommendation application, targeting news enthusiasts in French-speaking regions. The system used Microsoft's MIND dataset and NRMS model paper as references, and adopted the Transformer model as the core algorithm, achieving efficient news representation and matching.</li>
+<li><strong>My Role</strong>: In this project, I was the main developer, responsible for the entire process from data processing to model deployment. I worked closely with other team members to complete the project's requirement analysis, design, development, testing and optimization.</li>
+<li><strong>Technology Stack</strong>:<ul>
+<li>PyTorch | Transformer | Docker | Kubernetes | RESTful API | Git | Linux</li>
 </ul>
 </li>
-<li><p><strong>Bachelor's Degree (2014-2018):</strong> Shijiazhuang Tiedao University, Major in Network Engineering</p>
+<li><strong>Main Responsibilities</strong>:<ul>
+<li>Responsible for docking the business data interface, converting the raw news data and user data into the data format that the model can process, performing data cleaning, feature construction and feature selection tasks.</li>
+<li>Responsible for using existing NLP models, such as BERT, to train and generate word vector files based on French, which are used to represent the text information of news and users.</li>
+<li>Responsible for building a news recommendation model based on Transformer, using a small dataset for training and debugging, and using a GPU cloud platform for complete training and evaluation.</li>
+<li>Responsible for packaging the trained model as a Docker container, and deploying it to the Kubernetes distributed service architecture, providing a RESTful API interface, and implementing the online service of news recommendation.</li>
+<li>Responsible for running and testing the performance of the model in real scenarios, collecting user feedback and data metrics, and continuously improving the performance and effect of the model according to the shortcomings.</li>
+</ul>
 </li>
+<li><strong>Project Outcomes</strong>: Through this project, I learned and mastered the relevant knowledge and technology of NLP and recommendation systems, such as Transformer model, word vector, news representation and matching, etc. I also improved my software development ability, such as data processing, model building, containerized deployment, distributed service, etc. The project provided an efficient French news recommendation module for the company's news recommendation application, significantly improving the user's reading volume, click-through rate, retention rate and other key indicators, achieving the project's expected goals, and receiving praise from the company and users.</li>
 </ul>
-<h3 class="atx" id="internship-and-work-experience-1">Internship and Work Experience</h3>
-<h4 class="atx" id="algorithm-engineer-or-beijing-france-telecom-research-center-or-nov-2020---apr-2021-1">Algorithm Engineer | Beijing France Telecom Research Center | Nov 2020 - Apr 2021</h4>
+<h4 class="atx" id="reinforcement-learning-student-ability-testing-system">Reinforcement Learning Student Ability Testing System</h4>
 <ul>
-<li><strong>NLP-based French News Recommendation System:</strong> Designed and developed a recommendation system, enhancing user experience.</li>
+<li><strong>Project Introduction</strong>: This is a research project on the topic selection algorithm based on reinforcement learning technology, aiming to effectively assess the examinee's knowledge state. The project was carried out to solve two problems existing in the current topic selection algorithm based on information quantity, which are: one is that the information quantity method cannot capture the implicit cognitive information between topics and knowledge points, and the other is that the information quantity method relies on the examinee's estimated knowledge state, which is inaccurate. The project proposes a method of using reinforcement learning technology to automatically learn the topic selection algorithm, which can reasonably capture the cognitive relationship between topics, avoid unnecessary topic tests, and does not rely on the examinee's estimated knowledge state.</li>
+<li><strong>My Role</strong>: In this project, I was the core algorithm developer, responsible for the program design, data processing, code writing and debugging of the entire algorithm part. I worked closely with other team members to complete the project's idea, design, experiment and paper writing.</li>
+<li><strong>Technology Stack</strong>:<ul>
+<li>Pytorch | Numpy | Pandas | Scikit-learn | Git | Linux</li>
 </ul>
-<h4 class="atx" id="algorithm-engineer-or-future-education-high-tech-center-beijing-normal-university-or-nov-2022---apr-2023-1">Algorithm Engineer | Future Education High-Tech Center, Beijing Normal University | Nov 2022 - Apr 2023</h4>
-<ul>
-<li><strong>Reinforcement Learning-based ACT Testing System:</strong> Responsible for designing and implementing a student ability testing system based on reinforcement learning, achieving outstanding results.</li>
-<li><strong>Self-service Borrowing and Returning System for Sports Equipment:</strong> Utilized Flask framework and MySQL database, participated in the development of a self-service borrowing and returning system for sports equipment, improving efficiency in equipment management.</li>
+</li>
+<li><strong>Main Responsibilities</strong>:<ul>
+<li>Responsible for participating in the project's idea discussion and innovation, proposing the idea of using reinforcement learning technology to improve the topic selection process, and designing the algorithm framework and process with team members.</li>
+<li>Responsible for completing the program design, data processing, code writing and debugging of the entire algorithm part, using the TensorFlow framework to implement the topic selection algorithm based on reinforcement learning, and comparing and analyzing it with the existing topic selection algorithm based on information quantity.</li>
+<li>Responsible for conducting a large number of experiments using simulated examinee data and real examinee data, verifying the effectiveness and superiority of the algorithm, and using tools such as Numpy, Pandas, Scikit-learn and Matplotlib for data processing and visualization.</li>
+<li>Responsible for writing academic papers with team members, and publishing papers at international conferences, receiving recognition and praise from the academic community.</li>
+</ul>
+</li>
+<li><strong>Project Outcomes</strong>: Through this project, I learned and mastered the relevant knowledge and technology of reinforcement learning and computer adaptive testing, such as the basic concepts, algorithms, frameworks of reinforcement learning, and the principles, methods, applications of item response theory, computer adaptive testing, etc. I also improved my algorithm development ability, such as program design, data processing, code writing, debugging, experimentation, paper writing, etc. The project proposed an innovative topic selection algorithm based on reinforcement learning, which significantly improved the topic selection process in computer adaptive testing, effectively assessed the examinee's knowledge state, greatly reduced the number of topics that the examinee needed to do, achieved the project's expected goals, and was published at the AIED international conference.</li>
 </ul>
 <h4 class="atx" id="project-name-self-service-borrowing-and-returning-cabinet-for-sports-equipment">Project Name: Self-service Borrowing and Returning Cabinet for Sports Equipment</h4>
 <ul>
